[package]
name = "localshare"
version = "0.1.0"
edition = "2021"
description = "Simple P2P port sharing CLI tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
rand = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
libc = "0.2"
dirs = "5"
chrono = "0.4"
